--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "race-signal",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Race a promise against an AbortSignal",
   "main": "src/index.js",
   "types": "dist/src/index.d.ts",
@@ -22,5 +22,8 @@
   "license": "ISC",
   "devDependencies": {
     "aegir": "^36.1.1"
-  }
+  },
+  "contributors": [
+    "achingbrain <alex@achingbrain.net>"
+  ]
 }
