--- a/package.json
+++ b/package.json
@@ -2,28 +2,136 @@
   "name": "race-signal",
   "version": "0.1.0",
   "description": "Race a promise against an AbortSignal",
-  "main": "src/index.js",
-  "types": "dist/src/index.d.ts",
+  "author": "Alex Potsides <alex@achingbrain.net>",
+  "license": "Apache-2.0 OR MIT",
+  "homepage": "https://github.com/achingbrain/race-signal#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/achingbrain/race-signal.git"
+  },
+  "bugs": {
+    "url": "https://github.com/achingbrain/race-signal/issues"
+  },
+  "type": "module",
+  "types": "./dist/src/index.d.ts",
   "files": [
     "src",
     "dist",
+    "!dist/test",
     "!**/*.tsbuildinfo"
   ],
+  "exports": {
+    ".": {
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/src/index.js"
+    }
+  },
+  "eslintConfig": {
+    "extends": "ipfs",
+    "parserOptions": {
+      "sourceType": "module"
+    }
+  },
+  "release": {
+    "branches": [
+      "master"
+    ],
+    "plugins": [
+      [
+        "@semantic-release/commit-analyzer",
+        {
+          "preset": "conventionalcommits",
+          "releaseRules": [
+            {
+              "breaking": true,
+              "release": "major"
+            },
+            {
+              "revert": true,
+              "release": "patch"
+            },
+            {
+              "type": "feat",
+              "release": "minor"
+            },
+            {
+              "type": "fix",
+              "release": "patch"
+            },
+            {
+              "type": "docs",
+              "release": "patch"
+            },
+            {
+              "type": "test",
+              "release": "patch"
+            },
+            {
+              "type": "deps",
+              "release": "patch"
+            },
+            {
+              "scope": "no-release",
+              "release": false
+            }
+          ]
+        }
+      ],
+      [
+        "@semantic-release/release-notes-generator",
+        {
+          "preset": "conventionalcommits",
+          "presetConfig": {
+            "types": [
+              {
+                "type": "feat",
+                "section": "Features"
+              },
+              {
+                "type": "fix",
+                "section": "Bug Fixes"
+              },
+              {
+                "type": "chore",
+                "section": "Trivial Changes"
+              },
+              {
+                "type": "docs",
+                "section": "Documentation"
+              },
+              {
+                "type": "deps",
+                "section": "Dependencies"
+              },
+              {
+                "type": "test",
+                "section": "Tests"
+              }
+            ]
+          }
+        }
+      ],
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/github",
+      "@semantic-release/git"
+    ]
+  },
   "scripts": {
-    "lint": "aegir ts -p check && aegir lint",
+    "clean": "aegir clean",
+    "lint": "aegir lint",
     "build": "aegir build",
-    "test": "aegir test -t node",
-    "test:node": "aegir test -t node",
-    "release": "aegir release -t node",
-    "release-minor": "aegir release -t node --type minor",
-    "release-major": "aegir-release -t node --type major"
+    "test": "aegir test",
+    "test:node": "aegir test -t node --cov",
+    "test:chrome": "aegir test -t browser --cov",
+    "test:chrome-webworker": "aegir test -t webworker",
+    "test:firefox": "aegir test -t browser -- --browser firefox",
+    "test:firefox-webworker": "aegir test -t webworker -- --browser firefox",
+    "release": "aegir release",
+    "dep-check": "aegir dep-check",
+    "docs": "aegir docs"
   },
-  "author": "Alex Potsides <alex@achingbrain.net>",
-  "license": "ISC",
   "devDependencies": {
-    "aegir": "^36.1.1"
-  },
-  "contributors": [
-    "achingbrain <alex@achingbrain.net>"
-  ]
+    "aegir": "^40.0.13"
+  }
 }
